src/style.scss
$border-color: #26A0DA;
$bg-color: #CBE8F6;
$border-color-hover: #70C0E7;
$bg-color-hover: #E5F3FB;
$distance: -19px;

.flow-grid {
  width: 1px;
  height: 1px;
  div {
    box-sizing: border-box;
  }
  table {
    border-spacing: 0;
  }
  tr td:first-child {min-width: 0}
  tr:first-child td {min-height: 0; height: 0}
  td { position: relative; height: 0; min-height: 20px; min-width: 40px; max-width:200px; vertical-align: top; padding: 0; }

  .element {
    display: flex;
    flex-flow: column;
    margin-top: auto;
    // height: 100%;
    .box {
      min-height: 30px;
      min-width: 200px;
      flex: 0 1 auto;
      position: relative;
    }
    .connection-extender {
      width: calc(50% + 1px);
      border-right: 1px solid #bbb;
      flex: 1 1 auto;
    }
  }

  // start, square, ...


  &.mode-edit .element .box:hover{
    cursor: pointer;
    
    // TODO: square, start, end
    
    // branch
    .branch-text {
      background-color: $bg-color;
      border-color: $border-color;
    }
    .branch-right-triangle:before {
      border-color: transparent transparent transparent $border-color;
    }
    .branch-right-triangle:after {
      border-color: transparent transparent transparent $bg-color;
    }
    .branch-left-triangle:before {
      border-color: transparent $border-color transparent transparent;
    }
    .branch-left-triangle:after {
      border-color: transparent $bg-color transparent transparent;
    }

    // condition
    div.condition:hover {
      .condition-text {
        background-color: $bg-color;
        border-color: $border-color;
      }
    }
  }

  .element.selected {
    div.branch {
      .branch-text {
        background-color: $bg-color;
        border-color: $border-color;
      }
      .branch-right-triangle:before {
        border-color: transparent transparent transparent $border-color;
      }
      .branch-right-triangle:after {
        border-color: transparent transparent transparent $bg-color;
      }
      .branch-left-triangle:before {
        border-color: transparent $border-color transparent transparent;
      }
      .branch-left-triangle:after {
        border-color: transparent $bg-color transparent transparent;
      }
    }
  }
  .branch {
    width: 100%;
    height: 40px;
    position: absolute;
  }
  .branch-text {
    background: white;
    padding-top: 9px;
    font-weight: bold;
    text-align: center;
    width: calc(100% - 40px);;
    margin-left: 20px;
    height: 40px;
    position: relative;
    border-top: 1px solid #bbbbbb;
    border-bottom: 1px solid #bbbbbb;
  }
  .branch-right-triangle {
    height: 40px;
    width: 0;
    position: relative;
    right: 20px;
    float: right;
  }
  .branch-right-triangle:before, .branch-right-triangle:after {
    content: '';
    display: block;
    position: absolute;
    left: 100%;
    width: 0;
    height: 0;
    border-style: solid;
  }
  .branch-right-triangle:after {
    top: 1px;
    border-color: transparent transparent transparent white;
    border-width: 19px;
  }
  .branch-right-triangle:before {
    top: 0px;
    border-color: transparent transparent transparent #bbb;
    border-width: 20px;
  }
  .branch-left-triangle {
    height: 40px;
    width: 0;
    margin-left: 20px;
    position: relative;
    float: left;
  }
  .branch-left-triangle:before, .branch-left-triangle:after {
    content: '';
    display: block;
    position: absolute;
    right: 0px;
    width: 0;
    height: 0;
    border-style: solid;
  }
  .branch-left-triangle:after {
    top: 1px;
    border-color: transparent white transparent transparent;
    border-width: 19px;
  }
  .branch-left-triangle:before {
    top: 0px;
    border-color: transparent #bbb transparent transparent;
    border-width: 20px;
  }

  // // condition
  // .element.element-condition {
  //   height: 100%;
  // }

  .element.selected {
    div.condition {
      .condition-text {
        background-color: $bg-color;
        border-color: $border-color;
      }
    }
  }

  // .element .square {
  //   border: 1px solid #bbbbbb;
  //   font-weight: bold;
  //   height: 40px;
  //   text-align: center;
  //   padding-top: 9px;
  // }

  .box {
    // position: relative;
    // width: 100%;
    // min-width: 200px;
    // height: auto;
    // text-align: center;
    // margin-top: 20px;
    // display: flex;
    // flex-flow: column;
    .condition-text {
      flex: 0 1 auto;
      // >div {
      // margin-top: 20px;
      display: inline-block;
      border: 1px solid #bbb;
      border-radius: 20px;
      text-align: center;
      padding: 5px 12px;
      min-width: 200px;

      // }
    }
    .connection-extender {
      flex: 1 1 auto;
      width: 50%;
      border-right: 1px solid #bbb;
    }
    &.first:before {
      content: '';
      top: 40px;
      left: 0;
      width: 50%;
      height: 20px;
      position: absolute;
      border-right: 1px solid #bbb;
    }
    &.middle:before {
      content: '';
      top: 20px;
      left: 0;
      width: 50%;
      height: 40px;
      position: absolute;
      border-top: 1px solid #bbb;
      border-right: 1px solid #bbb;
    }
    &.middle:after {
      content: '';
      top: 20px;
      left: 50%;
      width: 50%;
      height: 40px;
      position: absolute;
      border-top: 1px solid #bbb;
    }
    &.last:before {
      content: '';
      top: 20px;
      left: 0;
      width: 50%;
      height: 40px;
      position: absolute;
      border-top: 1px solid #bbb;
      border-right: 1px solid #bbb;
    }
  }
}

